--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Çağatay ÇALI",
   "license": "MIT",
   "dependencies": {
+    "@slack/client": "^3.12.0",
     "body-parser": "^1.17.2",
+    "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "nedb": "^1.8.0",
     "node-telegram-bot-api": "^0.27.1"
