ENV version bump

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": "12.x"
+  },
   "author": "Çağatay ÇALI",
   "license": "MIT",
   "dependencies": {
